# Gehaltszettel_Reader

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  ruff.toml
betriebsratsumlage/: __init__.py  betriebsratsumlage.py
pdf/: __init__.py  pdf.py
pdf/formats/: __init__.py  base.py  sap.py  zeit_net.py
